# smriti

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  update_html.py
.github/workflows/: deploy.yml
benchmarks/: README.md  harness.py  judge.py  judge_results.py  requirements.txt
benchmarks/browser_edge/: README.md  run_bench.py
benchmarks/locomo/: README.md  loader.py  run_eval.py
benchmarks/locomo/data/: locomo.json
benchmarks/longmemeval/: README.md  loader.py  run_eval.py
benchmarks/longmemeval/data/: longmemeval.json
benchmarks/results/: REAL_DATASETS_REPORT.md  browser_edge_20260427_153419.json  browser_edge_20260427_153516.json  browser_edge_20260427_161150.json  locomo_20260426_152333.json  locomo_20260427_153341.json  locomo_20260427_161152.json  longmemeval_20260426_153717.json  longmemeval_20260426_153830.json  longmemeval_20260427_153358.json  longmemeval_20260427_161153.json
bindings/python/: README.md  pyproject.toml
bindings/python/smriti/: __init__.py  client.py  crewai.py  langchain.py  types.py
bindings/python/tests/: test_client.py  test_types.py
core/: Cargo.toml
core/examples/: token_savings.rs
core/src/: http.rs  lib.rs  mcp.rs  node.rs  scope.rs  smriti.rs  wasm.rs
core/src/_old_v1/: graph.rs  index.rs  lib.rs  recall.rs  snapshot.rs  store.rs
core/src/core/: consolidation.rs  decay.rs  embeddings.rs  hdc.rs  hippocampus.rs  mod.rs  neocortex.rs  ner.rs  prediction.rs  recall.rs
core/src/protocol/: mod.rs  smrp.rs
core/src/store/: in_memory.rs  mod.rs  sqlite.rs
core/tests/: agi_integration_test.rs  readme_example.rs
docs/: architecture_flow.md  capabilities.md
frontend/: index.html
frontend/scripts/: main.js
frontend/styles/: main.css
