[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smriti"
version = "0.1.0"
description = "Python SDK for Smriti — the neuroscience-inspired memory engine for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CodeGraph Team" },
]
keywords = ["ai", "memory", "agents", "llm", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.30"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/fork-demon/codegraph"
Documentation = "https://github.com/fork-demon/codegraph/tree/main/smriti-py"
Repository = "https://github.com/fork-demon/codegraph"
